# browser

./: BUILDING.md  CMakeLists.txt  LICENSE  README.md  adblocker.cpp  adblocker.h  brouser.pro  downloadmanager.h  mainwindow.cpp  mainwindow.h  readermode.cpp  readermode.h  resources.qrc  settings.cpp  syncmanager.h  types.h
config/: adblock_settings.json  adblock_stats.json  browser_settings.json  certificates.json  privacy_settings.json
docs/: API.md  CONTRIBUTING.md
resources/: Info.plist
resources/adblock/: rules.txt
resources/config/: default_settings.json  search_engines.json
resources/html/: error.html  newtab.html
resources/linux/: brouser.desktop
resources/styles/: dark.qss  light.qss  styles.qss
src/: adblocker.cpp  adblocker.h  bookmarkdialog.ui  bookmarkmanager.cpp  bookmarkmanager.h  certificatemanager.cpp  certificatemanager.h  downloadmanager.cpp  downloadmanager.ui  downloadsdialog.cpp  downloadsdialog.h  extensionmanager.cpp  extensionmanager.h  historymanager.cpp  historymanager.h  mainwindow.ui  passwordmanager.cpp  passwordmanager.h  privacymanager.cpp  privacymanager.h  readermode.cpp  readermode.h  settings.h  settings.ui  syncmanager.cpp
tests/: CMakeLists.txt  adblock_test.cpp  bookmark_test.cpp  certificate_test.cpp  download_test.cpp  history_test.cpp  main_test.cpp  privacy_test.cpp  reader_test.cpp  sync_test.cpp  test_resources.qrc
